--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "server=localhost;user=workoutinterf;password=Miller2450!;database=WorkoutApp"
+    "Default": "server=192.168.1.24;user=workoutinterf;password=Miller2450!;database=WorkoutApp"
   }
 }
